fixed side nav margin

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html,body{
     width: 100%;
     margin: 0px;
     display: flex;
+    margin: 0; padding: 0; border: 0;
 }
 header,footer{
     
@@ -22,6 +23,7 @@ header,footer{
 }
 footer{
     bottom:0;
+    position: fixed;
 }
 main{
     padding-left: 130px;
@@ -37,7 +39,8 @@ li{
 }
 
 .sidenav {
-    height: 90.7%;
+    height:  calc(100% - 66px);
+    /* height: 100vh; */
     width: 120px;
     position: fixed;
     z-index: 1;
@@ -47,7 +50,7 @@ li{
     overflow-x: hidden;
     padding-top: 20px;
     vertical-align: middle;
-
+    overflow: hidden;
   }
   
   .sidenav a {
