--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ main{
     /* padding-bottom: 10px; */
     padding-top: 20px;
     font-family: sans-serif;
+    background-color: #FAF9F6;
 }
 
 li{
