--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ header,footer{
     
     color:whitesmoke;
     position: fixed;
-    /* height: 20px; */
+    height: 23px;
     font-size: 20px;
     background: rgb(64, 63, 63);
     width: 100%;
-    /* height: 5%; */
     text-align: center;
     vertical-align: middle;
     font-weight: bold;
