--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ footer{
 main{
     padding-left: 130px;
     /* padding-bottom: 10px; */
-    padding-top: 20px;
+    padding-top: 24px;
     font-family: sans-serif;
     background-color: #FAF9F6;
+    margin-left: 24px;
 }
 
 li{
@@ -75,3 +76,16 @@ span {
   .sidenav a:hover {
     color: #f1f1f1;
   }
+
+.intro{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.mainimage{
+    border-radius: 10px;
+}
+
+.firstItem{
+    margin-top: 6px;
+}
