--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html,body{
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     margin: 0px;
     display: flex;
     margin: 0; padding: 0; border: 0;
+    background-color: #FAF9F6;
 }
 header,footer{
     
@@ -29,7 +30,6 @@ main{
     /* padding-bottom: 10px; */
     padding-top: 24px;
     font-family: sans-serif;
-    background-color: #FAF9F6;
     margin-left: 24px;
 }
 
@@ -95,4 +95,7 @@ ul{
 .detailed-info{
     margin-left: 30px;
     margin-right: 30px;
+}
+.contact-section{
+    margin-bottom: 60px;
 }
